--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,9 +1,10 @@
 .sidebar {
   background-color: var(--slack-color);
   border-top: 1px solid #49274b;
-  max-width: 260px;
+  /* max-width: 260px; */
   color: white;
   flex: 0.3;
+  overflow: scroll;
 }
 .sidebar__header {
   display: flex;
